--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
     "@angular/platform-browser": "^19.2.0",
     "@angular/platform-browser-dynamic": "^19.2.0",
     "@angular/router": "^19.2.0",
-    "@primeng/themes": "^19.1.4",    
+    "@primeng/themes": "^19.1.4",
     "@tailwindcss/postcss": "^4.1.14",
+    "chart.js": "^4.5.1",
     "postcss": "^8.5.6",
     "primeflex": "^4.0.0",
     "primeicons": "^7.0.0",
